--- a/emacs.org
+++ b/emacs.org
@@ -1656,6 +1656,9 @@ From [[https://oremacs.com/2017/03/18/dired-ediff/][abo-abo]]:
 #+BEGIN_SRC emacs-lisp
 (require 'cl)
 
+(when (string= system-type "darwin")
+  (setq dired-use-ls-dired nil))
+
 (defun ibizaman/ediff-files ()
   (interactive)
   (lexical-let ((files (dired-get-marked-files))
