fix eyebrowse setup hopefully

--- a/emacs.org
+++ b/emacs.org
@@ -1634,8 +1634,7 @@ Add all feeds from [[http://planet.emacsen.org/][Planet Emacsen]]:
   :config
   (add-to-list 'window-persistent-parameters '(window-side . writable))
   (add-to-list 'window-persistent-parameters '(window-slot . writable))
-  (setq eyebrowse-new-workspace t)
-  (eyebrowse-mode 1))
+  (setq eyebrowse-new-workspace t))
 #+END_SRC
 
 * Slack
