--- a/emacs.org
+++ b/emacs.org
@@ -551,7 +551,7 @@ Inserted by installing 'org-mode' or when a release is made."
 #+BEGIN_SRC emacs-lisp
 (use-package org
   :straight t
-  :after evil
+  :after (evil es-mode)
   :init
   (defun my/org-mode-hook-evil ()
       (setq evil-auto-indent nil))
@@ -563,7 +563,8 @@ Inserted by installing 'org-mode' or when a release is made."
      (sql . t)
      (python . t)
      (shell . t)
-     (dot . t)))
+     (dot . t)
+     (elasticsearch . t)))
 
   (progn
     (defun ibizaman/org-copy-element ()
@@ -1407,6 +1408,13 @@ Installing:
 (use-package ob-mongo
   :straight t)
 #+END_SRC
+
+** Elasticsearch
+#+BEGIN_SRC emacs-lisp
+(use-package es-mode
+  :straight t)
+#+END_SRC
+
 * Secrets
 #+BEGIN_SRC emacs-lisp
 (use-package pass
