--- a/emacs.org
+++ b/emacs.org
@@ -1442,7 +1442,7 @@ brew install gmime
 sudo make install
 #+END_SRC
 
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
 (add-to-list 'load-path "~/.emacs.d/straight/repos/mu4e/mu4e")
 (use-package mu4e
   :config
@@ -1563,12 +1563,12 @@ sudo make install
         smtpmail-smtp-user "ibizapeanut@gmail.com"))
 #+END_SRC
 
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
 (use-package org-mu4e
   :after org mu4e)
 #+END_SRC
 
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
 (use-package mu4e-maildirs-extension
   :straight t
   :after mu4e
