--- a/emacs.org
+++ b/emacs.org
@@ -205,6 +205,16 @@ If no FONT-SIZE provided, reset the size to its default variable."
   :straight (command-log-mode :type git :host github :repo "ibizaman/command-log-mode" :branch "master"))
 #+END_SRC
 
+** Menu
+#+BEGIN_SRC emacs-lisp
+(defun ibizaman/evil-collection-imenu-setup ()
+  "Set up `evil' bindings for `imenu'."
+  (evil-define-key 'normal 'global
+    "gt" 'counsel-semantic-or-imenu))
+
+(ibizaman/evil-collection-imenu-setup)
+#+END_SRC
+
 ** Customization
 #+BEGIN_SRC emacs-lisp
 ; Move custom-set-variables and custom-set-faces in different file
