--- a/emacs.org
+++ b/emacs.org
@@ -1630,6 +1630,14 @@ I have NO idea why I need that second use-package, but without it the :config se
   (eyebrowse-mode)
   ; (message "EYEBROWSE 3")
   :bind (:map eyebrowse-mode-map
+         ("C-c C-w h" . eyebrowse-switch-to-window-config-1)
+         ("C-c C-w j" . eyebrowse-switch-to-window-config-2)
+         ("C-c C-w k" . eyebrowse-switch-to-window-config-3)
+         ("C-c C-w l" . eyebrowse-switch-to-window-config-4)
+         ("C-c C-w n" . eyebrowse-switch-to-window-config-5)
+         ("C-c C-w m" . eyebrowse-switch-to-window-config-6)
+         ("C-c C-w ," . eyebrowse-switch-to-window-config-7)
+         ("C-c C-w ." . eyebrowse-switch-to-window-config-8)
          ("C-c C-w n" . eyebrowse-next-window-config)
          ("C-c C-w p" . eyebrowse-prev-window-config)
          ("C-c C-w C-n" . eyebrowse-next-window-config)
