--- a/emacs.org
+++ b/emacs.org
@@ -755,10 +755,8 @@ I don't know why, but I need this to load =org-mks= and =org-show-all=.
 (load (expand-file-name "~/.emacs.d/straight/repos/org/lisp/org.el"))
 #+END_SRC
 
-Also, we need to start the server.
-#+BEGIN_SRC emacs-lisp
-(server-start)
-#+END_SRC
+No need to start the server manually here as we use a daemon:
+[[id:498ba909-6d1b-44a6-b583-afb406d6347f][dots.org/Emacs]]
 
 *** Protocol
 Inspired from https://orgmode.org/worg/org-contrib/org-protocol.html
