--- a/emacs.org
+++ b/emacs.org
@@ -2273,6 +2273,9 @@ _r_eturn    r_e_cord  _c_lear frame  _q_uit
 #+END_SRC
 
 * Launcher
+:PROPERTIES:
+:ID:       A4948FD0-6617-4059-A128-E0C48B1B0E24
+:END:
 #+BEGIN_SRC emacs-lisp
 (defun ibizaman/pass-frame (&optional _switch)
   "Complete pass names in a dedicated frame."
@@ -2327,10 +2330,10 @@ Then run ACTION with given selected element as argument."
                           :foreground "grey")
       (let ((ivy-height 20)
             (ivy-count-format ""))
-        (raise-frame)
         (ivy-read prompt elems
                   :action action
                   :unwind (lambda ()
+                            (shell-command "/Applications/Hammerspoon.app/Contents/Resources/extensions/hs/ipc/bin/hs -c 'backFromEmacs()'")
                             (delete-frame)
                             (other-window 1)))))))
 #+END_SRC
